# prophic3

./: .gitignore  README.md  algorithm.txt  bmc.cmd  fifo-abstract-int.vmt  genfifo-data_in-prophecy.vmt  handwritten-array-const-easy.vmt  handwritten-array-const-hard-error.smt2  handwritten-array-const-hard-error.vmt  handwritten-array-const-hard.smt2  handwritten-array-const-hard.vmt  handwritten-array-const.smt2  notes.org  parallel_prophic3.py  run-quic3.sh  setup-nuxmv.sh  thoughts.org
array-axiom-exp/: README.md  theory-assertions.txt
array-sim/: Makefile  array-abstraction-test.cpp  array-flatten-test.cpp  array-sim.cpp  array_abstract.cpp  array_abstract.h  array_abstracter.cpp  array_abstracter.h  array_abstractor.cpp  array_abstractor.h  array_flattener.cpp  array_flattener.h  array_refiner.cpp  array_refiner.h  flatten.cpp  simple.cpp  structs.h  test.cpp
bjesse/: bjesse.vmt  bjesse_abs.smv  bjesse_abs_unsafe.vmt
debugging-quic3-benchmark-invariants/: ic3ia-invariant.txt  mappings.txt  quic3-invariant.txt
exps/: algorithm.txt  genfifo-give-counter-invars.vmt  genfifo-manual-invariant.vmt  genfifo-more-prophecy.vmt  genfifo-prophecy.vmt  genfifo.vmt  ic3-ia.cmd  notes.org  old-genfifo.vmt
exps/array-axiom-exp/: const-array-test.smt2  print_theory_assertions.sh  test.smt2
exps/bjesse/: bjesse.smv  bjesse_abs.vmt  bjesse_abs_unsafe.smv
exps/chc-comp-2019/: failed-translations.txt
exps/chc-comp-2020/: failed-translations.txt
exps/const-arrays/: comparison.smv
exps/fifo/: fifo-abstract-guided.smv  fifo-abstract-guided.vmt  fifo-abstract-int.smv  fifo-abstract.smv  fifo-abstract.vmt  fifo-enable-check.vmt  fifo-int.smv  fifo-int.vmt  fifo-pred.smv  fifo-pred.vmt  fifo.smv  fifo.vmt  genfifo-check-critical-invar.smv  genfifo-check-critical-invar.vmt  genfifo-manual-invariant.smv
exps/flarge_enc/: README
exps/handwritten/: always_1.smv  always_1.vmt  always_1_easier.smv  always_1_easier.vmt  always_1_preconditioned.smv  false_large_int_const.smt2  fibonacci-ind.smv  fibonacci-ind.vmt  fibonacci-true-weak.smv  fibonacci-true-weak.vmt  increasing-array-simple.smv  increasing-array-simple.vmt  increasing-array.smv  increasing-array.vmt  init1.smv  init1.vmt  init3-0.vmt  init3-1.vmt  init3-2.vmt  init3.smv  lockserv.smv  lockserv.vmt  true_large_int_const.smt2  true_large_int_const.vmt  write_1.smv  write_1.vmt
exps/quic3-extra/: README  cmd.txt  seahorn_cmd.sh
exps/quic3-extra-kratos/: array_assert_loop_dep_false-unreach-call.c.vmt  array_copy.c.vmt  array_find.c.vmt  array_find_first_nonull.c.vmt  array_init_const_int.c.vmt  array_shadowinit_true-unreach-call.c.vmt  array_simple_sort_prop.c.vmt  standard_copy.c.vmt  standard_copy_4_N_nd_assert_loop.c.vmt  standard_copy_N_det_assert_nd.c.vmt  standard_copy_N_nd_assert_nd.c.vmt  standard_init_N_nd_assert_loop.c.vmt
exps/refined-systems/: standard_compareModified_abs_system_2.vmt
exps/rewritten-quic3/: rewritten_array_init_const.smv  rewritten_array_init_const.vmt
exps/simple/: 2darray_false.smv  2darray_false.vmt  2darray_true.smv  README.md  array-disequality-abstract.smv  array-disequality-abstract.vmt  array-disequality.smv  deep-bug.vmt  (+36 more)
fifo/: fifo-enable-check.smv  fifo-enable-check.vmt  fifo-prophecy.smv  fifo-prophecy.vmt  fifo.smv  gen_fifo.py
ic3ia/: CMakeLists.txt  api.cpp  bmc.cpp  bmc.h  horn2vmt.cpp  ia.cpp  ia.h  ic3.cpp  ic3.h  ic3ia.cpp  ic3ia.h  ic3par.py  kind.cpp  kind.h  ltl.cpp  ltl.h  main.cpp  opts.h  proof.cpp  prover.h  solver.cpp  solver.h  ts.cpp  ts.h  unroll.cpp  unroll.h  utils.cpp  utils.h
ic3ia-arrays/: CMakeLists.txt  Makefile  array_abstractor.cpp  array_abstractor.h  array_axiom_enumerator.cpp  array_axiom_enumerator.h  array_flattener.cpp  array_flattener.h  array_refiner.cpp  history_refiner.cpp  history_refiner.h  ic3_arrays.cpp  ic3_arrays.h  ic3ia-arrays.cpp  prophecy_refiner.cpp  prophecy_refiner.h  rewriter.cpp  rewriter.h  tester.cpp  utils.cpp  utils.h
ic3ia-arrays/samples/: array_init_const.smt2.vmt  bjesse-ivar.vmt  hard-array-false.vmt  hard-array-int-false.vmt  hard-array-int-true.smv  impossible-eq.vmt  simple-eq-arrays-all-state.vmt  simple_2d_array.vmt
ic3ia-comp/: .hg_archival.txt  README.md  api.cpp  api.h  bmc.cpp  configure.sh  horn2vmt.cpp  ia.cpp  ic3.cpp  ic3.h  live.h  opts.h  unroll.h
ic3ia-orig/: .hg_archival.txt  .hgtags  README.txt  bmc.h  horn2vmt.cpp  ia.cpp  ia.h  ic3.cpp  live.cpp  ltl.cpp  main.cpp  opts.h  proof.cpp  proof.h  proofchecker.py  prover.h  solver.cpp  solver.h  ts.cpp  ts.h  utils.cpp  utils.h
ic3ia-proph/: CMakeLists.txt  ic3ia-proph-utils.h  main.cpp
mathsat/: LICENSE.txt
portfolio_ic3ia/: portfolio_ic3ia.py
portfolio_prophic3/: portfolio_prophic3.py
portfolio_prophic3ia_arrays/: portfolio_prophic3ia_arrays.py
prophic3/: CMakeLists.txt  README.md  array_abstractor.cpp  array_abstractor.h  array_axiom_enumerator.cpp  array_axiom_enumerator.h  configure.sh  history_refiner.cpp  history_refiner.h  main.cpp  parallel_prophic3.py  prophecy_refiner.cpp  prophecy_refiner.h  prophic3-api.cpp  prophic3-api.h  prophic3-c-api.cpp  prophic3-c-api.h  prophic3.cpp  prophic3.h  rewriter.cpp  rewriter.h  tester.cpp  utils.cpp  utils.h
prophic3/bv-samples/: fifo-no-next.vmt  simple-eq-arrays-edited.vmt  simple-eq-arrays.vmt  store-axiom.vmt
prophic3/samples/: 2darray_true.vmt  array-int-trans-pipeline-false.vmt  array-int-trans-pipeline.vmt  array_init_partial.smt2.vmt  chc-LIA-lin-arrays_057.smt2.vmt  false_large_int_const.vmt  hard-array.vmt  unsafe_init_const.vmt
scripts/: ic3ia_wrapper.py  mk_plots.py  nuxmv2vmt.py  patch_smt_bench.sed  portfolio_prophic3.py  process_results.py  vmt.py  vmt2horn.py  vmt_check_invar.py  z3horntranslate.py
simple/: README.md  array-disequality-abstract-minimal.smv  array-disequality-abstract.smv  array-int-trans-pipeline.smv  array-int-trans.smv  array.smv  deep-bug-modal-por.smv  deep-bug-por.smv  deep-bug-por.vmt  deep-bug-proph.vmt  deep-bug.smv  hard-array-abstract-proph.smv  hard-array-abstract-proph.vmt  hard-array-bug.vmt  hard-array-proph.smv  hard-array.smv
(+4106 files in other folders)
